kubernetes/apps/debug/whoami/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.${SECRET_DOMAIN}`) # && ClientIP(`10.1.0.0/16`, `192.168.1.0/24`)
      middlewares:
        - name: default
        # - name: basicauth
      services:
        - name: whoami
          namespace: debug
          port: 80

  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
